Prevent scrollbar from being visible on data entry with a lot of lists (> 10 lists) 73vh is also possible, but then a scrollbar appears on 110% zoom

--- a/frontend/src/components/ui/ProgressList/ProgressList.module.css
+++ b/frontend/src/components/ui/ProgressList/ProgressList.module.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   overflow: hidden;
   gap: 1rem;
+  max-height: 70vh;
 
   ul {
     list-style: none;
